lib_LTLIBRARIES = libmp4ff.la

include_HEADERS = mp4ff.h

libmp4ff_la_SOURCES = atom.c ctts.c dinf.c dref.c edts.c \
	elst.c esds.c hdlr.c iods.c matrix.c mdat.c mdhd.c \
	mdia.c minf.c moov.c mp4ff.c mvhd.c smhd.c stbl.c \
	stco.c stsc.c stsd.c stsdtable.c stss.c stsz.c stts.c \
	tkhd.c trak.c udta.c util.c vmhd.c \
	funcprotos.h mp4ff.h private.h

AM_CFLAGS = -O2 -g
LIBTOOL_DEPS =
LIBS =

