dnl configure.in for faad2-2.0 package

AC_INIT(src/libaac.c)
AM_INIT_AUTOMAKE(libaac, 0.5)

dnl save CFLAGS since AC_PROG_CC insert "-g -O2" if CFLAGS is empty
cflags_save="$CFLAGS"

AC_DISABLE_STATIC
AM_DISABLE_STATIC

AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL


AC_CHECK_PROGS(XMMS_CONFIG, xmms-config,"no_found")
if test "$XMMS_CONFIG" = "no_found"; then
 AC_MSG_ERROR("*** xmms-config not found check PATH or install xmms")
fi

CFLAGS="$cflags_save `xmms-config --cflags` -Wall"
CPPFLAGS="$CPPFLAGS $CFLAGS"
AC_SUBST(CFLAGS)

AC_CHECK_HEADER(pthread.h,,
	AC_MSG_ERROR(*** pthread headers support not installed or not found))
AC_CHECK_HEADER(id3.h,,
	AC_MSG_ERROR(*** id3lib headers support not installed or not found))

dnl *** check for presence of libfaad2 in the system
dnl *** it's maybe a new version than provided here (faad2-1.1)
dnl ***
dnl ***
have_libfaad2=yes
AC_CHECK_HEADER(faad.h,,
	[echo "*** use libfaad2-2.0 in static mode"
	have_libfaad2=no])
AM_CONDITIONAL(USE_STATIC_FAAD2, test $have_libfaad2 = no)

AC_OUTPUT(Makefile src/Makefile )
echo "***"
echo "*** configuration xmms-aac plugin done (version 0.5)"
echo "***"
echo "*** note that if you can't decode aac files you need"
echo "*** the old libfaad2-1.1, typicaly for files encoded with psytel-2.15"
