# Copyright (C) 1988 Eleftherios Gkioulekas <lf@amath.washington.edu>
#  
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

# The following rules are for m4 files
# m4datadir = $(datadir)/aclocal

# List your m4 macros here
m4macros =              \
  lf_cc.m4              \
  lf_cxx.m4             \
  lf_cxx_convenience.m4 \
  lf_nm.m4              \
  lf_fortran.m4         \
  lf_lisp.m4            \
  lf_local.m4           \
  lf_txtc.m4            \
  lf_host_type.m4       \
  lf_x11.m4             \
  lf_texidoc.m4         \
  lf_warnings.m4        \
  lf_bash.m4 

# The following is boilerplate
# m4data_DATA = $(m4macros) 
EXTRA_DIST = $(m4macros) 