# $Id: Makefile.am,v 1.1 2002/01/21 08:16:20 menno Exp $
# 
# Copyright (C) 1999 Scott Thomas Haug <sth2@cs.wustl.edu>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

the_headers =                   \
  error.h                       \
  field.h                       \
  flags.h                       \
  frame.h                       \
  globals.h                     \
  header.h                      \
  header_frame.h                \
  header_tag.h                  \
  misc_support.h                \
  sized_types.h                 \
  spec.h                        \
  tag.h                         \
  utils.h

id3includedir      = $(includedir)/id3
id3include_HEADERS = $(the_headers)

noinst_HEADERS = \
  uint28.h       
